--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,40 @@
     <title>Document</title>
   </head>
 
-  <body>
-    <h1>Welcome to My Page</h1>
-  </body>
+<body>
+  <h1>MY DROPDOWN MENU</h1>
+
+  <div class="container">
+      <div class="dropdown">
+         <button class="dropbtn">SECRET OPTIONS</button>
+         <div class="dropdown-content">
+             <a href="#" class = "hidden">Good choice</a>
+             <a href="#" class = "hidden">Bad choice</a>
+             <a href="#" class = "hidden">Try it</a>
+             <a href="#" class = "hidden">Don't try it</a>
+         </div>
+      </div>
+ 
+      <div class="dropdown">
+         <button class="dropbtn">OTHER SECRETS</button>
+         <div class="dropdown-content">
+             <a href="#" class = "hidden">The first one</a>
+             <a href="#" class = "hidden">The bad one</a>
+             <a href="#" class = "hidden">The lucky one</a>
+             <a href="#" class = "hidden">It's not a secret</a>
+         </div>
+      </div>
+ 
+      <div class="dropdown">
+         <button class="dropbtn">LAST SECRETS</button>
+         <div class="dropdown-content">
+             <a href="#" class = "hidden">The ultimate secret</a>
+             <a href="#" class = "hidden">The buried secret </a>
+             <a href="#" class = "hidden">The empty secret</a>
+             <a href="#" class = "hidden">Secret secret</a>
+         </div>
+      </div>
+  </div>
+  
+ </body>
 </html>
