--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,32 @@
   </head>
 
 <body>
+
+  <h1>MY CAROUSELOK </h1>
+
+  <div class = container-carousel>
+
+    <div class = picture-carousel>
+      <img src="https://picsum.photos/200/300?random=1" alt="Random Image 1">
+    </div>
+    <div class = picture-carousel>
+      <img src="https://picsum.photos/200/300?random=2" alt="Random Image 2">
+    </div>
+    <div class = picture-carousel>
+      <img src="https://picsum.photos/200/300?random=3" alt="Random Image 3">
+    </div>
+    <div class = picture-carousel>
+      <img src="https://picsum.photos/200/300?random=4" alt="Random Image 4">
+    </div>
+    <div class = picture-carousel>
+      <img src="https://picsum.photos/200/300?random=5" alt="Random Image 5">
+    </div>
+    <div class = picture-carousel>
+      <img src="https://picsum.photos/200/300?random=6" alt="Random Image 6">
+    </div>
+
+  </div>
+
   <h1>MY DROPDOWN MENU</h1>
 
   <div class="container">
@@ -40,6 +66,8 @@
          </div>
       </div>
   </div>
+
+
   
  </body>
 </html>
