--- a/src/template.html
+++ b/src/template.html
@@ -8,27 +8,35 @@
 
 <body>
 
-  <h1>MY CAROUSELS</h1>
+  <div class="mycarousel">
+    <h1>MY CAROUSELS</h1>
 
-  <div class = container-carousel>
+    <div class = container-carousel>
+      <div class="carousel-track">
+        <div class = picture-carousel>
+          <img src="https://picsum.photos/200/300?random=1" alt="Random Image 1">
+        </div>
+        <div class = picture-carousel>
+          <img src="https://picsum.photos/200/300?random=2" alt="Random Image 2">
+        </div>
+        <div class = picture-carousel>
+          <img src="https://picsum.photos/200/300?random=3" alt="Random Image 3">
+        </div>
+        <div class = picture-carousel>
+          <img src="https://picsum.photos/200/300?random=4" alt="Random Image 4">
+        </div>
+        <div class = picture-carousel>
+          <img src="https://picsum.photos/200/300?random=5" alt="Random Image 5">
+        </div>
+        <div class = picture-carousel>
+          <img src="https://picsum.photos/200/300?random=6" alt="Random Image 6">
+        </div>
+      </div>
+    </div>
 
-    <div class = picture-carousel>
-      <img src="https://picsum.photos/200/300?random=1" alt="Random Image 1">
-    </div>
-    <div class = picture-carousel>
-      <img src="https://picsum.photos/200/300?random=2" alt="Random Image 2">
-    </div>
-    <div class = picture-carousel>
-      <img src="https://picsum.photos/200/300?random=3" alt="Random Image 3">
-    </div>
-    <div class = picture-carousel>
-      <img src="https://picsum.photos/200/300?random=4" alt="Random Image 4">
-    </div>
-    <div class = picture-carousel>
-      <img src="https://picsum.photos/200/300?random=5" alt="Random Image 5">
-    </div>
-    <div class = picture-carousel>
-      <img src="https://picsum.photos/200/300?random=6" alt="Random Image 6">
+    <div class="container_btn">
+      <button class="carousel-btn prev">◀</button>
+      <button class="carousel-btn next">▶</button>
     </div>
 
   </div>
